Better function arg handling